[gd_scene load_steps=13 format=2]

[ext_resource path="res://GFX/Env/road_segment1.png" type="Texture" id=1]
[ext_resource path="res://Segment.gd" type="Script" id=2]
[ext_resource path="res://Segments/Level1/Segment2_level1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/Enemy_truck.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/Enemy_oil.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 293.085 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 143.589, 287.516 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32.0785, 287.106 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 146.865, 288.968 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 138.363, 182.652 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 318.033, 10 )

[node name="Segment" type="Node2D"]
script = ExtResource( 2 )
nam = "seg1"
max_enemies = 3
enemies = [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ]
next_segments = [ null, ExtResource( 3 ) ]
next_segments_chance = [ 100, 20 ]

[node name="SegmentSprite" type="Sprite" parent="."]
scale = Vector2( 8, 8 )
texture = ExtResource( 1 )

[node name="LeftEdge" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftEdge"]
position = Vector2( -178.342, -0.744506 )
shape = SubResource( 1 )

[node name="LeftArea2D" type="Area2D" parent="LeftEdge"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftEdge/LeftArea2D"]
position = Vector2( -305.748, -1.27356 )
shape = SubResource( 2 )

[node name="RightEdge" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightEdge"]
position = Vector2( 190.319, 2.09532 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="RightEdge"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightEdge/Area2D"]
position = Vector2( 299.112, -2.35358 )
shape = SubResource( 4 )

[node name="SpawnArea2D" type="Area2D" parent="."]
position = Vector2( 38.956, -14.2339 )

[node name="SpawnArea" type="CollisionShape2D" parent="SpawnArea2D"]
position = Vector2( -43.3966, -98.2041 )
shape = SubResource( 5 )

[node name="newMiddle" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="newMiddle"]
position = Vector2( -0.289001, 284.223 )
shape = SubResource( 6 )

[connection signal="body_entered" from="LeftEdge/LeftArea2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="LeftEdge/LeftArea2D" to="." method="_on_LeftArea2D_body_entered"]
[connection signal="body_entered" from="RightEdge/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="newMiddle" to="." method="_on_newMiddle_body_entered"]
