[gd_scene load_steps=8 format=2]

[ext_resource path="res://GFX/Env/road_segment6.png" type="Texture" id=1]
[ext_resource path="res://Segment.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 155.191, 16.8615 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 32.0785, 284.715 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 146.865, 288.968 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 290.582 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 144.877, 294.883 )

[node name="Segment" type="Node2D"]
script = ExtResource( 2 )
nam = "seg5"

[node name="SegmentSprite" type="Sprite" parent="."]
scale = Vector2( 8, 8 )
texture = ExtResource( 1 )

[node name="FinishLine" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinishLine"]
position = Vector2( 0.892945, 20.4848 )
shape = SubResource( 3 )

[node name="RightEdge" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightEdge"]
position = Vector2( 201.117, -9.42451 )
shape = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="RightEdge"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightEdge/Area2D"]
position = Vector2( 310.429, 0.968858 )
shape = SubResource( 5 )

[node name="LeftEdge" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftEdge"]
position = Vector2( -178.526, 2.68417 )
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="LeftEdge"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftEdge/Area2D"]
position = Vector2( -308.018, -1.42149 )
shape = SubResource( 7 )

[connection signal="area_entered" from="FinishLine" to="." method="_on_FinishLine_area_entered"]
[connection signal="body_entered" from="FinishLine" to="." method="_on_FinishLine_body_entered"]
[connection signal="body_entered" from="RightEdge/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="LeftEdge/Area2D" to="." method="_on_Area2D_body_entered"]
